Fix tooltip overflow

--- a/translate/src/modules/translationform/components/TranslationForm.css
+++ b/translate/src/modules/translationform/components/TranslationForm.css
@@ -98,37 +98,32 @@
   padding: 0 8px 0 4px;
 }
 
-.cm-editor .cm-completionIcon {
-  display: none;
+.cm-completionIcon {
+  display: none !important;
 }
 
-.cm-editor .cm-tooltip {
-  border: 1px solid var(--main-border-1);
-  background-color: var(--black-3);
+.cm-tooltip {
+  border: 1px solid var(--main-border-1) !important;
+  background-color: var(--black-3) !important;
   padding: 10px 12px;
 }
 
-.cm-editor .cm-tooltip-autocomplete ul li {
+.cm-tooltip-autocomplete ul li {
   align-items: center;
-  color: var(--light-grey-7);
+  color: var(--light-grey-7) !important;
   display: flex;
   font-size: 13px;
   height: 22px;
 }
 
-.cm-editor
-  .cm-tooltip-autocomplete
-  ul
-  li
-  .cm-completionLabel
-  .cm-completionMatchedText {
+.cm-tooltip-autocomplete ul li .cm-completionLabel .cm-completionMatchedText {
   text-decoration: none;
   color: var(--search-color);
 }
 
-.cm-editor .cm-tooltip-autocomplete ul li[aria-selected] {
-  background: var(--dark-grey-2);
-  color: var(--white-1);
+.cm-tooltip-autocomplete ul li[aria-selected] {
+  background: var(--dark-grey-2) !important;
+  color: var(--white-1) !important;
 }
 
 .singlefield .cm-content,
